Closed
Bug 737344
Opened 13 years ago
Closed 13 years ago
Binary compatibility of jsval on SPARC
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)
Details
Attachments
(1 file)
|
711 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
Similar issue of Bug 689101.
The calling conversion is different for POD and non-POD type on SPARC.
So it crashes in C_GetEmptyStringValue().
Attachment #607472 -
Flags: review?(luke)
Updated•13 years ago
|
Attachment #607472 -
Flags: review?(luke) → review+
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in
before you can comment on or make changes to this bug.
Description
•