Bug 737344 make the jsval_layout field in JS::Value public on SPARC for binary compatibility across C and C++ r=luke